--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@ layout: default-ffc
     <div class="col-md-12">
         <div class="intro-header">
             <div class="col-xs-12 text-center abcen1">
-                <br>
-                <br>
-                <br>
+
                 <h1>Family Folder CollectorFFCบริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพในชุมชน</h1>
                 <h3>Family Folder Collector</h3>
 
@@ -21,21 +19,18 @@ layout: default-ffc
 </div>
 
 <center>
-    <div id="home" class="container">
+    <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <br>
                 <br>
                 <h2>Family Folder Collector </h2>
                 <h4>โปรแกรมบันทึกข้อมูลสุขภาพครอบครัวแบบพกพา</h4>
-                <br>
+
             </div>
         </div>
 </center>
-<br>
-<br>
-<br>
-<br>
+
 <div class="container">
     <div class="row">
         <div class="col-sm-3 wow fadeInDown text-center animated animated" style="visibility: visible;">
@@ -78,16 +73,15 @@ layout: default-ffc
 
     </div>
 </div>
+  <div class="container">
+  </div>
+</div>
+</div>
 
-</div>
-</div>
-<br>
-<br>
-<hr>
-<div id="survey" class="content-section-a trb-survey-bg">
+<div  class="content-section-a trb-survey-bg">
 
     <div class="container">
-        <h2>คืออะไร???</h2></center>
+        <h2>คืออะไร???</h2>
         <div class="row">
             <div class="col-sm-6 pull-right wow fadeInRightBig animated animated" style="visibility: visible;">
                 <img class="img-responsive " src="/img/1.png" width="325" height="310">
@@ -99,7 +93,7 @@ layout: default-ffc
                     โปรแกรมบันทึกข้อมูลสุขภาพครอบครัว (Family Folder Collector) หรือเราเรียกสั้นๆว่า FFC โดยโปรแกรมถูกออกแบบให้ใช้งานร่วมกับฐานข้อมูล โปรแกรมระบบงานโรงพยาบาลส่งเสริมสุขภาพตำบล และศูนย์สุขภาพชุมชน JHCISของศูนย์เทคโนโลยีสารสนเทศและการสื่อสาร สำนักงานปลัดกระทรวง
                     สาธารณสุข เพื่ออำนวยความสะดวกให้เจ้าหน้าที่สาธารณสุข ที่พ.สต.นำไปใช้ เยี่ยมบ้าน คัดกรองโรค สำรวจพิกัดบ้าน สถานที่สำคัญ ในชุมชน ลดปัญหาการกรอกข้อมูลซ้ำซ้อนและส่งเสริมการทำงานเชิงรุกให้มีประสิทธิภาพมากยิ่งขึ้น
                 </p>
-                <br>
+
                 <p>
                     <a class="" href="https://play.google.com/store/apps/details?id=th.in.ffc" target="_blank" role="button">
                         <img style="height: 64px;" src="/img/Google-Play.png">
@@ -110,9 +104,8 @@ layout: default-ffc
     </div>
     <!-- /.container -->
 </div>
-<div id="report" class="content-section-a trb-report-bg">
-    <br>
-    <br>
+<div  class="content-section-a trb-report-bg">
+
     <div class="container">
         <div class="row">
             <div class="col-sm-6 wow fadeInLeftBig animated animated" style="visibility: visible; animation-name: fadeInLeftBig;">
@@ -130,7 +123,7 @@ layout: default-ffc
     </div>
 </div>
 
-<div id="showe" class="content-section-b trb-showe-bg">
+<div  class="content-section-b trb-showe-bg">
     <div class="content-section-b">
         <div class="container">
 
@@ -177,11 +170,13 @@ layout: default-ffc
                                 <h4>ความสัมพันธ์ฝังญาติ</h4>
                                 <p>สามารถข้ามไปดูผังเครือญาติของบุคคลที่มีความสัมพันธ์แต่ไม่มีชื่ออยู่ในทะเบียนบ้าน</p>
                             </div>
-                            <div class="column colspan-1"> <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:72e40e72-e3d4-41a4-9198-48808464b8b4/search.svg?cdnVersion=dz" alt="" height="34">
+                            <div class="column colspan-1">
+                              <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:72e40e72-e3d4-41a4-9198-48808464b8b4/search.svg?cdnVersion=dz" alt="" height="34">
                                 <h4>การค้นหา</h4>
                                 <p>มีระบบค้นหา รหัสวินิจฉัยโรค เพื่อสะดวกในค้นหารหัสโรค หรือ คำหลักของโรคนั้นได้ พร้อมรหัสวินิจฉัยโรคที่มีใช้งานบ่อยๆ</p>
                             </div>
-                            <div class="column colspan-1"> <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:72e40e72-e3d4-41a4-9198-48808464b8b4/search.svg?cdnVersion=dz" alt="" height="34">
+                            <div class="column colspan-1">
+                              <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:72e40e72-e3d4-41a4-9198-48808464b8b4/search.svg?cdnVersion=dz" alt="" height="34">
                                 <h4>การค้นหา</h4>
                                 <p>มีระบบค้นหา รหัสวินิจฉัยโรค เพื่อสะดวกในค้นหารหัสโรค หรือ คำหลักของโรคนั้นได้ พร้อมรหัสวินิจฉัยโรคที่มีใช้งานบ่อยๆ</p>
                             </div>
@@ -195,26 +190,17 @@ layout: default-ffc
       </div>
 
             <!-- /.container -->
-        </div>
-        <br>
-        <br>
-    </div>
-</div>
 
-<div id="video" class="content-section-b trb-video-bg">
+<div class="content-section-b trb-video-bg">
     <div class="content-section-b">
         <div class="container">
             <div class="row white">
                 <div class="col-md-6 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
                     <h2>FFC Video </h2>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/DJceyu3Bg6c" frameborder="0" allowfullscreen></iframe>
-                    <br>
-                    <br>
-                    <br>
+
                 </div>
-                <br>
-                <br>
-                <br>
+
                 <div class="col-md-6 pull-right wow fadeInRightBig animated animated" style="visibility: visible;">
 
                     <p class="lead lead-dark">
@@ -225,4 +211,6 @@ layout: default-ffc
             </div>
         </div>
     </div>
-</div><br><br>
+</div>
+<br>
+<br>
