--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ layout: default-ffc
         <div class="col-sm-3 wow fadeInDown text-center animated animated" style="visibility: visible;">
             <a href="" class="btn btn-info btn-lg">
                 <span class="glyphicon glyphicon-picture text-big Pink"></span>
-                <h4>  รูปภาพกิจกรรม  </h4>
+                <h4>รูปภาพกิจกรรม</h4>
             </a>
             <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
         </div>
@@ -84,8 +84,8 @@ layout: default-ffc
         <h2>คืออะไร???</h2>
         <div class="row">
             <div class="col-sm-6 pull-right wow fadeInRightBig animated animated" style="visibility: visible;">
-                <img class="img-responsive " src="/img/1.png" width="325" height="310">
-                <img class="img-responsive " src="/img/1.png" width="325" height="310">
+                <img class="img-responsive " src="/img/1.png" alt="FFC.com"width="325" height="310">
+                <img class="img-responsive " src="/img/1.png" alt="FFC.com"width="325" height="310">
             </div>
             <div class="col-sm-6 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
                 <h2 class="section-heading heading-pink">Family Folder Collector </h2>
@@ -96,7 +96,7 @@ layout: default-ffc
 
                 <p>
                     <a class="" href="https://play.google.com/store/apps/details?id=th.in.ffc" target="_blank" role="button">
-                        <img style="height: 64px;" src="/img/Google-Play.png">
+                        <img style="height: 64px;" src="/img/Google-Play.png" alt="FFC.com" width="150" height="100">
                     </a>
                     <!--<a class="btn btn-embossed btn-info" href="#" role="button">Visit Website</a>--></p>
             </div>
@@ -109,7 +109,7 @@ layout: default-ffc
     <div class="container">
         <div class="row">
             <div class="col-sm-6 wow fadeInLeftBig animated animated" style="visibility: visible; animation-name: fadeInLeftBig;">
-                <img class="img-responsive " src="img/all1.png" alt="">
+                <img class="img-responsive " src="img/all1.png"  alt="FFC.com" width="350" height="280">
             </div>
 
             <div class="col-sm-6 wow fadeInRightBig animated animated" data-animation-delay="200" style="visibility: visible; animation-name: fadeInRightBig;">
@@ -185,7 +185,7 @@ layout: default-ffc
                     </section>
                 </div>
             </div>
-          </section>
+
         </div>
       </div>
 
@@ -212,5 +212,5 @@ layout: default-ffc
         </div>
     </div>
 </div>
-<br>
-<br>
+<br></br>
+<br></br>
