--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@ layout: default-ffc
                 <br>
                 <h2>Family Folder Collector </h2>
                 <h4>โปรแกรมบันทึกข้อมูลสุขภาพครอบครัวแบบพกพา</h4>
-
+                </br>
+                </br>
             </div>
         </div>
+    </div>
 </center>
 
 <div class="container">
@@ -45,7 +47,7 @@ layout: default-ffc
         <!-- /.col-lg-4 -->
 
         <div class="col-sm-3 wow fadeInDown text-center animated animated" style="visibility: visible;">
-            <a href="" class="btn btn-info btn-lg">
+            <a href="https://suppaluck.github.io/gallery-ffc.html" class="btn btn-info btn-lg">
                 <span class="glyphicon glyphicon-picture text-big Pink"></span>
                 <h4>รูปภาพกิจกรรม</h4>
             </a>
@@ -73,19 +75,15 @@ layout: default-ffc
 
     </div>
 </div>
-  <div class="container">
-  </div>
-</div>
-</div>
 
-<div  class="content-section-a trb-survey-bg">
+<div class="content-section-a trb-survey-bg">
 
     <div class="container">
         <h2>คืออะไร???</h2>
         <div class="row">
             <div class="col-sm-6 pull-right wow fadeInRightBig animated animated" style="visibility: visible;">
-                <img class="img-responsive " src="/img/1.png" alt="FFC.com"width="325" height="310">
-                <img class="img-responsive " src="/img/1.png" alt="FFC.com"width="325" height="310">
+                <img class="img-responsive " src="/img/1.png" alt="FFC.com" width="325" height="310">
+                <img class="img-responsive " src="/img/1.png" alt="FFC.com" width="325" height="310">
             </div>
             <div class="col-sm-6 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
                 <h2 class="section-heading heading-pink">Family Folder Collector </h2>
@@ -104,12 +102,12 @@ layout: default-ffc
     </div>
     <!-- /.container -->
 </div>
-<div  class="content-section-a trb-report-bg">
+<div class="content-section-a trb-report-bg">
 
     <div class="container">
         <div class="row">
             <div class="col-sm-6 wow fadeInLeftBig animated animated" style="visibility: visible; animation-name: fadeInLeftBig;">
-                <img class="img-responsive " src="img/all1.png"  alt="FFC.com" width="350" height="280">
+                <img class="img-responsive " src="img/all1.png" alt="FFC.com" width="350" height="280">
             </div>
 
             <div class="col-sm-6 wow fadeInRightBig animated animated" data-animation-delay="200" style="visibility: visible; animation-name: fadeInRightBig;">
@@ -118,78 +116,79 @@ layout: default-ffc
                 <p class="lead">
                     ผู้ใช้แอพ FFC Plus นี้ สำหรับเจ้าหน้าที่ทางด้านสาธารณะสุขที่ทำงานอยู่ตามสถานีอนามัย โรงพยาบาลส่งเสริมสุขภาพตำบล (รพ.สต.)ที่ใช้งานโปรแกรม JHCIS อยู่เท่านั้น
                 </p>
+                </br>
             </div>
         </div>
     </div>
 </div>
 
-<div  class="content-section-b trb-showe-bg">
+<div class="content-section-b trb-showe-bg">
     <div class="content-section-b">
         <div class="container">
 
             <div class="row">
                 <h2>คุณสมบัติ</h2>
-                    <section class="all-features featured text-left">
-                      <div class="col-sm-4 wow fadeInLeftBig animated animated" style="visibility: visible; animation-name: fadeInLeftBig;">
+                <section class="all-features featured text-left">
+                    <div class="col-sm-4 wow fadeInLeftBig animated animated" style="visibility: visible; animation-name: fadeInLeftBig;">
                         <div class="grid grid-3 vertical-gutters-large gallery">
                             <div class="column colspan-1">
-                                <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:7f8161cd-b215-4f9e-b2ec-019da0df3a0f/security.svg?cdnVersion=dz" alt="" height="34">
+                                <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:7f8161cd-b215-4f9e-b2ec-019da0df3a0f/security.svg?cdnVersion=dz" alt="FFC.com" height="34">
                                 <h4>ด้านความปลอดภัย</h4>
                                 <p>มีระบบการรักษาความปลอดภัยให้ฐานข้อมูลด้วยการเข้าและถอดรหัสลับก่อนใช้งานฐานข้อมูล เพื่อความปลอดภัยสูงสุดของฐานข้อมูล</p>
                             </div>
                             <div class="column colspan-1">
-                              <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:c0016e9b-9ee3-4662-b5fc-18c45246d311/guest-access.svg?cdnVersion=dz" alt="" height="34">
+                                <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:c0016e9b-9ee3-4662-b5fc-18c45246d311/guest-access.svg?cdnVersion=dz" alt="FFC.com" height="34">
                                 <h4>ยืนยันผู้ใช้</h4>
                                 <p>มีระบบการยืนยันผู้ใช้ที่สามารถเข้าถึงฐานข้อมูลได้ เพิ่มความปลอดภัยอีกระดับ</p>
                             </div>
                             <div class="column colspan-1">
-                                <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:f14dc24f-1a09-4918-86df-ecd79fe1e50a/screen-share.svg?cdnVersion=dz" alt="" height="34">
+                                <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:f14dc24f-1a09-4918-86df-ecd79fe1e50a/screen-share.svg?cdnVersion=dz" alt="FFC.com" height="34">
                                 <h4>การใช้งาน</h4>
                                 <p>ใช้งานร่วมกับโปรแกรมระบบงานโรงพยาบาลส่งเสริมสุขภาพตำบลและศูนย์สุขภาพชุมชน (JHCIS) ศูนย์เทคโนโลยีสารสนเทศและการสื่อสาร ได้อย่างอัตโนมัติ ด้วยโปรแกรม FFC Autosync 2011 ที่ติดตั้งไว้บนคอมพิวเตอร์แม่ข่าย (Server) </p>
                             </div>
-                          </div>
                         </div>
-                            <div class="col-sm-4">
-                            <div class="column colspan-1">
-                              <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:e3573d56-9e20-4c39-8900-89408d367c40/file-share.svg?cdnVersion=dz" alt="" height="34">
-                                <h4>ระบุตำแหน่ง</h4>
-                                <p>สามารถระบุตำแหน่งพิกัดหลังคาเรือนจากระบบ GPS หรือ AGPS อย่างอัตโนมัติได้</p>
-                            </div>
-                          <div class="column colspan-1">
-                               <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:0e4cb18d-c603-497a-8c4d-272b7f793c7f/unlimited-chat-rooms.svg?cdnVersion=dz" alt="" height="34">
-                                <h4>รายละเอียดผังญาติ</h4>
-                                <p>สามารถแสดงรายละเอียดข้อมูลคนในผังเครือญาติ เช่น เพศ วัย อายุ และสภาพการเป็นโรคเรื้อรังได้</p>
-                            </div>
-                            <div class="column colspan-1"> <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:68653569-7c0d-4d05-85d1-d79a04307d16/customize.svg?cdnVersion=dz" alt="" height="34">
-                                <h4>ถ่ายภาพบุคคล</h4>
-                                <p><span style="line-height: 1.6em;">สามารถถ่ายและบันทึกภาพของบุคคล และนำมาเก็บในฐานข้อมูลของโปรแกรม JHCIS ได้</span></p>
-                            </div>
-                          </div>
-                            <div class="col-sm-4">
-                            <div class="column colspan-1"> <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:72e40e72-e3d4-41a4-9198-48808464b8b4/search.svg?cdnVersion=dz" alt="" height="34">
-                                <h4>ความสัมพันธ์ฝังญาติ</h4>
-                                <p>สามารถข้ามไปดูผังเครือญาติของบุคคลที่มีความสัมพันธ์แต่ไม่มีชื่ออยู่ในทะเบียนบ้าน</p>
-                            </div>
-                            <div class="column colspan-1">
-                              <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:72e40e72-e3d4-41a4-9198-48808464b8b4/search.svg?cdnVersion=dz" alt="" height="34">
-                                <h4>การค้นหา</h4>
-                                <p>มีระบบค้นหา รหัสวินิจฉัยโรค เพื่อสะดวกในค้นหารหัสโรค หรือ คำหลักของโรคนั้นได้ พร้อมรหัสวินิจฉัยโรคที่มีใช้งานบ่อยๆ</p>
-                            </div>
-                            <div class="column colspan-1">
-                              <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:72e40e72-e3d4-41a4-9198-48808464b8b4/search.svg?cdnVersion=dz" alt="" height="34">
-                                <h4>การค้นหา</h4>
-                                <p>มีระบบค้นหา รหัสวินิจฉัยโรค เพื่อสะดวกในค้นหารหัสโรค หรือ คำหลักของโรคนั้นได้ พร้อมรหัสวินิจฉัยโรคที่มีใช้งานบ่อยๆ</p>
-                            </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="column colspan-1">
+                            <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:e3573d56-9e20-4c39-8900-89408d367c40/file-share.svg?cdnVersion=dz" alt="FFC.com" height="34">
+                            <h4>ระบุตำแหน่ง</h4>
+                            <p>สามารถระบุตำแหน่งพิกัดหลังคาเรือนจากระบบ GPS หรือ AGPS อย่างอัตโนมัติได้</p>
+                        </div>
+                        <div class="column colspan-1">
+                            <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:0e4cb18d-c603-497a-8c4d-272b7f793c7f/unlimited-chat-rooms.svg?cdnVersion=dz" alt="FFC.com" height="34">
+                            <h4>รายละเอียดผังญาติ</h4>
+                            <p>สามารถแสดงรายละเอียดข้อมูลคนในผังเครือญาติ เช่น เพศ วัย อายุ และสภาพการเป็นโรคเรื้อรังได้</p>
+                        </div>
+                        <div class="column colspan-1"> <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:68653569-7c0d-4d05-85d1-d79a04307d16/customize.svg?cdnVersion=dz" alt="FFC.com" height="34">
+                            <h4>ถ่ายภาพบุคคล</h4>
+                            <p><span style="line-height: 1.6em;">สามารถถ่ายและบันทึกภาพของบุคคล และนำมาเก็บในฐานข้อมูลของโปรแกรม JHCIS ได้</span></p>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="column colspan-1"> <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:72e40e72-e3d4-41a4-9198-48808464b8b4/search.svg?cdnVersion=dz" alt="FFC.com" height="34">
+                            <h4>ความสัมพันธ์ฝังญาติ</h4>
+                            <p>สามารถข้ามไปดูผังเครือญาติของบุคคลที่มีความสัมพันธ์แต่ไม่มีชื่ออยู่ในทะเบียนบ้าน</p>
+                        </div>
+                        <div class="column colspan-1">
+                            <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:72e40e72-e3d4-41a4-9198-48808464b8b4/search.svg?cdnVersion=dz" alt="FFC.com" height="34">
+                            <h4>การค้นหา</h4>
+                            <p>มีระบบค้นหา รหัสวินิจฉัยโรค เพื่อสะดวกในค้นหารหัสโรค หรือ คำหลักของโรคนั้นได้ พร้อมรหัสวินิจฉัยโรคที่มีใช้งานบ่อยๆ</p>
+                        </div>
+                        <div class="column colspan-1">
+                            <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:72e40e72-e3d4-41a4-9198-48808464b8b4/search.svg?cdnVersion=dz" alt="FFC.com" height="34">
+                            <h4>การค้นหา</h4>
+                            <p>มีระบบค้นหา รหัสวินิจฉัยโรค เพื่อสะดวกในค้นหารหัสโรค หรือ คำหลักของโรคนั้นได้ พร้อมรหัสวินิจฉัยโรคที่มีใช้งานบ่อยๆ</p>
+                        </div>
 
-                        </div>
-                    </section>
-                </div>
+                    </div>
+                </section>
             </div>
-
         </div>
-      </div>
 
-            <!-- /.container -->
+    </div>
+</div>
+
+<!-- /.container -->
 
 <div class="content-section-b trb-video-bg">
     <div class="content-section-b">
