แก้ error อีกครั้ง

--- a/download-ffc.html
+++ b/download-ffc.html
@@ -1,5 +1,5 @@
 ---
-layout: ffc-layouts
+layout: default-ffc
 ---
 
 <h1>เอกสารดาวน์โหลด</h1>
@@ -44,19 +44,19 @@ th {
   <tr>
     <td>2</td>
     <td><a href="http://www.dms.moph.go.th/dmsweb/publish/publish07102016101008.rar" target="_blank">
-      การใช้งาน</td>
+      การใช้งาน</a></td>
     <td>5</td>
   </tr>
   <tr>
     <td>3</td>
     <td><a href="http://www.dms.moph.go.th/dmsweb/publish/publish07102016101008.rar" target="_blank">
-      ประชาชาติธุรกิจ FFC Plus</td>
+      ประชาชาติธุรกิจ FFC Plus</a></td>
     <td>9</td>
   </tr>
   <tr>
     <td>4</td>
     <td>
-      <a href="http://www.dms.moph.go.th/dmsweb/publish/publish07102016101008.rar" target="_blank"></td>
+      <a href="http://www.dms.moph.go.th/dmsweb/publish/publish07102016101008.rar" target="_blank"></a></td>
     <td>9</td>
   </tr>
   <tr>
@@ -97,5 +97,6 @@ th {
   </tr>
 </table>
 </center>
+</div>
 </div>
 </div>
