--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ layout: default-ffc
 </center>
 
 <div class="container">
+  <div class="center">
     <div class="row">
         <div class="col-sm-3 wow fadeInDown text-center animated animated" style="visibility: visible;">
 
@@ -63,16 +64,16 @@ layout: default-ffc
 
                 <span class="glyphicon glyphicon-home text-big Yellow"></span>
                 <h4>เทคนิคทางบ้าน</h4>
-          
+
             <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
         </div>
         <!-- /.col-lg-4 -->
 
     </div>
 </div>
+</div>
 
 <div class="content-section-a trb-survey-bg">
-
     <div class="container">
         <h2>คืออะไร???</h2>
         <div class="row">
@@ -98,11 +99,10 @@ layout: default-ffc
     <!-- /.container -->
 </div>
 <div class="content-section-a trb-report-bg">
-
     <div class="container">
         <div class="row">
             <div class="col-sm-6 wow fadeInLeftBig animated animated" style="visibility: visible; animation-name: fadeInLeftBig;">
-                <img class="img-responsive " src="img/all1.png" alt="FFC.com" width="350" height="280">
+                <img class="img-responsive " src="img/all1.png" alt="FFC.com" width="550" height="530">
             </div>
 
             <div class="col-sm-6 wow fadeInRightBig animated animated" data-animation-delay="200" style="visibility: visible; animation-name: fadeInRightBig;">
