--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default-ffc
 ---
-
+<div class="center">
 <div class="row">
     <div class="col-md-12">
         <div class="intro-header">
@@ -17,6 +17,7 @@ layout: default-ffc
 
     </div>
 </div>
+</div>
 <center>
     <div class="container">
         <div class="row">
@@ -26,10 +27,9 @@ layout: default-ffc
             </div>
         </div>
     </div>
-</center>
-
+  </center>
 <div class="container">
-  <div class="center">
+<div class="center">
     <div class="row">
         <div class="col-sm-3 wow fadeInDown text-center animated animated" style="visibility: visible;">
 
@@ -120,7 +120,7 @@ layout: default-ffc
 <div class="content-section-b trb-showe-bg">
     <div class="content-section-b">
         <div class="container">
-
+<div class="center">
             <div class="row">
                 <h2>คุณสมบัติ</h2>
                 <section class="all-features featured text-left">
@@ -182,12 +182,15 @@ layout: default-ffc
 
     </div>
 </div>
+</div>
+
 
 <!-- /.container -->
 
 <div class="content-section-b trb-video-bg">
     <div class="content-section-b">
         <div class="container">
+          <div class="center">
             <div class="row white">
                 <div class="col-md-6 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
                     <h2>FFC Video </h2>
@@ -204,4 +207,5 @@ layout: default-ffc
             </div>
         </div>
     </div>
+</div>
 </div>
