--- a/download-ffc.html
+++ b/download-ffc.html
@@ -1,9 +1,9 @@
 ---
 layout: default-ffc
 ---
-<div class="center">
 <h1>เอกสารดาวน์โหลด</h1>
 <div class="container">
+  <div class="center">
     <div class="row">
 <div class="col-md-12">
 
@@ -26,7 +26,7 @@ th {
     color: white;
 }
 </style>
-<center>
+
 <table style="width:50%">
 
   <tr>
@@ -96,7 +96,8 @@ th {
     <td>9</td>
   </tr>
 </table>
-</center>
+
+</div>
 </div>
 </div>
 </div>
