--- a/download-ffc.html
+++ b/download-ffc.html
@@ -1,12 +1,9 @@
 ---
 layout: default-ffc
 ---
-<h1>เอกสารดาวน์โหลด</h1>
 <div class="container">
-  <div class="center">
-    <div class="row">
 <div class="col-md-12">
-
+<h1>เอกสารดาวน์โหลด</h1>
 <style>
 table {
     border-collapse: collapse;
@@ -26,7 +23,7 @@ th {
     color: white;
 }
 </style>
-
+<center>
 <table style="width:50%">
 
   <tr>
@@ -96,8 +93,6 @@ th {
     <td>9</td>
   </tr>
 </table>
-
-</div>
-</div>
+</center>
 </div>
 </div>
