--- a/index.html
+++ b/index.html
@@ -5,22 +5,21 @@ layout: default-ffc
 <div class="row">
     <div class="col-md-12">
         <div class="intro-header">
+            <div class="container">
+              <div class="center">
             <div class="col-xs-12 text-center abcen1">
 
-                <h1>Family Folder CollectorFFCบริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพในชุมชน</h1>
+                <h2>Family Folder CollectorFFCบริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพในชุมชน</h2>
                 <h3>Family Folder Collector</h3>
 
             </div>
             <!-- /.container -->
-
+</div>
         </div>
-
+</div>
     </div>
 </div>
 
-
-
-</div>
 <center>
     <div class="container">
         <div class="row">
@@ -30,51 +29,7 @@ layout: default-ffc
             </div>
         </div>
     </div>
-  </center>
-<div class="container">
-<div class="center">
-    <div class="row">
-        <div class="col-sm-3 wow fadeInDown text-center animated animated" style="visibility: visible;">
-
-            <a href="https://suppaluck.github.io/location-ffc.html" class="btn btn-info btn-lg">
-                <span class="glyphicon glyphicon-map-marker text-big red"></span>
-                <h4>แสดงพิกัดผู้ใช้</h4>
-            </a>
-
-            <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
-        </div>
-        <!-- /.col-lg-4 -->
-
-        <div class="col-sm-3 wow fadeInDown text-center animated animated" style="visibility: visible;">
-            <a href="https://suppaluck.github.io/gallery-ffc.html" class="btn btn-info btn-lg">
-                <span class="glyphicon glyphicon-picture text-big Pink"></span>
-                <h4>รูปภาพกิจกรรม</h4>
-            </a>
-            <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
-        </div>
-        <!-- /.col-lg-4 -->
-        <div class="col-sm-3 wow fadeInDown text-center animated animated" style="visibility: visible;">
-            <a href="https://suppaluck.github.io/message-ffc.html" class="btn btn-info btn-lg">
-                <span class="glyphicon glyphicon-list-alt text-big Orange"></span>
-                <h4>ข่าวและกิจกรรม</h4>
-            </a>
-            <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
-        </div>
-        <!-- /.col-lg-4 -->
-
-        <div class="col-sm-3  wow fadeInDown text-center animated animated" style="visibility: visible;">
-
-
-                <span class="glyphicon glyphicon-home text-big Yellow"></span>
-                <h4>เทคนิคทางบ้าน</h4>
-
-            <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
-        </div>
-        <!-- /.col-lg-4 -->
-
-    </div>
-</div>
-</div>
+</center>
 
 <div class="content-section-a trb-survey-bg">
     <div class="container">
@@ -123,68 +78,65 @@ layout: default-ffc
 <div class="content-section-b trb-showe-bg">
     <div class="content-section-b">
         <div class="container">
-<div class="center">
-            <div class="row">
-                <h2>คุณสมบัติ</h2>
-                <section class="all-features featured text-left">
-                    <div class="col-sm-4 wow fadeInLeftBig animated animated" style="visibility: visible; animation-name: fadeInLeftBig;">
-                        <div class="grid grid-3 vertical-gutters-large gallery">
+            <div class="center">
+                <div class="row">
+                    <h2>คุณสมบัติ</h2>
+                    <section class="all-features featured text-left">
+                        <div class="col-sm-12 wow fadeInLeftBig animated animated" style="visibility: visible; animation-name: fadeInLeftBig;">
+
                             <div class="column colspan-1">
-                                <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:7f8161cd-b215-4f9e-b2ec-019da0df3a0f/security.svg?cdnVersion=dz" alt="FFC.com" height="34">
-                                <h4>ด้านความปลอดภัย</h4>
+                              <h4><i class="fa fa-lock" style="font-size:48px"></i> &nbsp; ด้านความปลอดภัย</h4>
+
                                 <p>มีระบบการรักษาความปลอดภัยให้ฐานข้อมูลด้วยการเข้าและถอดรหัสลับก่อนใช้งานฐานข้อมูล เพื่อความปลอดภัยสูงสุดของฐานข้อมูล</p>
                             </div>
                             <div class="column colspan-1">
-                                <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:c0016e9b-9ee3-4662-b5fc-18c45246d311/guest-access.svg?cdnVersion=dz" alt="FFC.com" height="34">
-                                <h4>ยืนยันผู้ใช้</h4>
+                                <h4><i class="fa fa-street-view" style="font-size:48px"></i> &nbsp;ยืนยันผู้ใช้</h4>
+
                                 <p>มีระบบการยืนยันผู้ใช้ที่สามารถเข้าถึงฐานข้อมูลได้ เพิ่มความปลอดภัยอีกระดับ</p>
                             </div>
                             <div class="column colspan-1">
-                                <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:f14dc24f-1a09-4918-86df-ecd79fe1e50a/screen-share.svg?cdnVersion=dz" alt="FFC.com" height="34">
-                                <h4>การใช้งาน</h4>
+                              <h4><i class="fa fa-ambulance" style="font-size:48px"></i>&nbsp; การใช้งาน</h4>
                                 <p>ใช้งานร่วมกับโปรแกรมระบบงานโรงพยาบาลส่งเสริมสุขภาพตำบลและศูนย์สุขภาพชุมชน (JHCIS) ศูนย์เทคโนโลยีสารสนเทศและการสื่อสาร ได้อย่างอัตโนมัติ ด้วยโปรแกรม FFC Autosync 2011 ที่ติดตั้งไว้บนคอมพิวเตอร์แม่ข่าย (Server) </p>
                             </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="column colspan-1">
-                            <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:e3573d56-9e20-4c39-8900-89408d367c40/file-share.svg?cdnVersion=dz" alt="FFC.com" height="34">
-                            <h4>ระบุตำแหน่ง</h4>
-                            <p>สามารถระบุตำแหน่งพิกัดหลังคาเรือนจากระบบ GPS หรือ AGPS อย่างอัตโนมัติได้</p>
-                        </div>
-                        <div class="column colspan-1">
-                            <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:0e4cb18d-c603-497a-8c4d-272b7f793c7f/unlimited-chat-rooms.svg?cdnVersion=dz" alt="FFC.com" height="34">
-                            <h4>รายละเอียดผังญาติ</h4>
-                            <p>สามารถแสดงรายละเอียดข้อมูลคนในผังเครือญาติ เช่น เพศ วัย อายุ และสภาพการเป็นโรคเรื้อรังได้</p>
-                        </div>
-                        <div class="column colspan-1"> <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:68653569-7c0d-4d05-85d1-d79a04307d16/customize.svg?cdnVersion=dz" alt="FFC.com" height="34">
-                            <h4>ถ่ายภาพบุคคล</h4>
-                            <p><span style="line-height: 1.6em;">สามารถถ่ายและบันทึกภาพของบุคคล และนำมาเก็บในฐานข้อมูลของโปรแกรม JHCIS ได้</span></p>
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="column colspan-1"> <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:72e40e72-e3d4-41a4-9198-48808464b8b4/search.svg?cdnVersion=dz" alt="FFC.com" height="34">
-                            <h4>ความสัมพันธ์ฝังญาติ</h4>
-                            <p>สามารถข้ามไปดูผังเครือญาติของบุคคลที่มีความสัมพันธ์แต่ไม่มีชื่ออยู่ในทะเบียนบ้าน</p>
-                        </div>
-                        <div class="column colspan-1">
-                            <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:72e40e72-e3d4-41a4-9198-48808464b8b4/search.svg?cdnVersion=dz" alt="FFC.com" height="34">
-                            <h4>การค้นหา</h4>
-                            <p>มีระบบค้นหา รหัสวินิจฉัยโรค เพื่อสะดวกในค้นหารหัสโรค หรือ คำหลักของโรคนั้นได้ พร้อมรหัสวินิจฉัยโรคที่มีใช้งานบ่อยๆ</p>
-                        </div>
-                        <div class="column colspan-1">
-                            <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:72e40e72-e3d4-41a4-9198-48808464b8b4/search.svg?cdnVersion=dz" alt="FFC.com" height="34">
-                            <h4>การค้นหา</h4>
-                            <p>มีระบบค้นหา รหัสวินิจฉัยโรค เพื่อสะดวกในค้นหารหัสโรค หรือ คำหลักของโรคนั้นได้ พร้อมรหัสวินิจฉัยโรคที่มีใช้งานบ่อยๆ</p>
-                        </div>
 
-                    </div>
-                </section>
+                            <div class="column colspan-1">
+                                <h4><i class="fa fa-map-marker" style="font-size:48px"></i>&nbsp;ระบุตำแหน่ง</h4>
+
+                                <p>สามารถระบุตำแหน่งพิกัดหลังคาเรือนจากระบบ GPS หรือ AGPS อย่างอัตโนมัติได้</p>
+                            </div>
+                            <div class="column colspan-1">
+                                  <h4><i class="fa fa-newspaper-o" style="font-size:48px"></i>&nbsp;รายละเอียดผังญาติ</h4>
+                                <p>สามารถแสดงรายละเอียดข้อมูลคนในผังเครือญาติ เช่น เพศ วัย อายุ และสภาพการเป็นโรคเรื้อรังได้</p>
+                            </div>
+                            <div class="column colspan-1">
+                              <h4><i class="fa fa-camera" style="font-size:48px"></i>&nbsp;ถ่ายภาพบุคคล</h4>
+
+                                <p><span style="line-height: 1.6em;">สามารถถ่ายและบันทึกภาพของบุคคล และนำมาเก็บในฐานข้อมูลของโปรแกรม JHCIS ได้</span></p>
+                            </div>
+                            <div class="column colspan-1">
+                                <h4>  <i class="fa fa-group" style="font-size:48px"></i>&nbsp;สร้างผังเครือญาติ</h4>
+
+                                <p>สามารถสร้างผังเครือญาติ (Genogram) ในรูปแบบกราฟฟิก โดยมีจุดศูนย์กลางที่เจ้าบ้านได้ ๔ รุ่นอายุคน (หนึ่งรุ่นอายุคนก่อนเจ้าบ้าน สองรุ่นอายุคนหลังเจ้าบ้าน) จากฐานข้อมูลของโปรแกรม JHCIS ได้อย่างอัตโนมัติ</p>
+                            </div>
+                            <div class="column colspan-1">
+                                <h4> <i class="fa fa-save" style="font-size:48px;"></i>&nbsp;บันทึกข้อมูล</h4>
+
+                                <p>สามารถบันทึกข้อมูลภาวะสุขภาพที่สำคัญในการออกเยี่ยมเพื่อปรับปรุงข้อมูลด้านสุขภาพได้</p>
+                            </div>
+
+                            <div class="column colspan-1">
+                                  <h4><i class="fa fa-search" style="font-size:48px"></i>&nbsp;การค้นหา</h4>
+
+                                <p>มีระบบค้นหา รหัสวินิจฉัยโรค เพื่อสะดวกในค้นหารหัสโรค หรือ คำหลักของโรคนั้นได้ พร้อมรหัสวินิจฉัยโรคที่มีใช้งานบ่อยๆ</p>
+                            </div>
+
+                        </div>
+                    </section>
+                </div>
             </div>
-        </div>
 
+        </div>
     </div>
-</div>
 </div>
 
 
@@ -193,22 +145,15 @@ layout: default-ffc
 <div class="content-section-b trb-video-bg">
     <div class="content-section-b">
         <div class="container">
-          <div class="center">
-            <div class="row white">
-                <div class="col-md-6 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
-                    <h2>FFC Video </h2>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/DJceyu3Bg6c" frameborder="0" allowfullscreen></iframe>
-              </div>
+            <div class="center">
+                <div class="row white">
+                    <div class="col-md-12 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
+                        <h2>FFC Video </h2>
+                        <iframe width="560" height="415" src="https://www.youtube.com/embed/DJceyu3Bg6c" frameborder="0" allowfullscreen></iframe>
+                    </div>
 
-                <div class="col-md-6 pull-right wow fadeInRightBig animated animated" style="visibility: visible;">
-
-                    <p class="lead lead-dark">
-                        โดยโปรแกรมบันทึกสุขภาพครอบครัวบนแท็บเล็ต Android นี้ เริ่มใช้งานจริงเมื่อปี 2554 เพื่อทดแทนการจัดเก็บข้อมูลแฟ้มอนามัยครอบครัวแบบเก่า ที่เป็นเล่มรูปแบบกระดาษ ซึ่งมีปัญหาอุปสรรคคือ เสียพื้นที่จัดเก็บ ข้อมูลไม่ทันสมัย ไม่สามารถสืบค้น วิเคราะห์ข้อมูล และการกรอกข้อมูลซ้ำซ้อนยุ่งยาก
-                        จากการจดลงกระดาษแล้วต้องมาพิมพ์บนคอมพิวเตอร์อีกที
-                    </p>
                 </div>
             </div>
         </div>
     </div>
-</div>
 </div>
