--- a/page2.html
+++ b/page2.html
@@ -1,1 +1,44 @@
-apple
+<div class="container">
+    <div class="center">
+        <div class="row">
+            <div class="col-sm-3 wow fadeInDown text-center animated animated" style="visibility: visible;">
+
+                <a href="https://suppaluck.github.io/location-ffc.html" class="btn btn-info btn-lg">
+                    <span class="glyphicon glyphicon-map-marker text-big"></span>
+                    <h4>แสดงพิกัดผู้ใช้</h4>
+                </a>
+
+                <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
+            </div>
+            <!-- /.col-lg-4 -->
+
+            <div class="col-sm-3 wow fadeInDown text-center animated animated" style="visibility: visible;">
+                <a href="https://suppaluck.github.io/gallery-ffc.html" class="btn btn-info btn-lg">
+                    <span class="glyphicon glyphicon-picture text-big"></span>
+                    <h4>รูปภาพกิจกรรม</h4>
+                </a>
+                <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
+            </div>
+            <!-- /.col-lg-4 -->
+            <div class="col-sm-3 wow fadeInDown text-center animated animated" style="visibility: visible;">
+                <a href="https://suppaluck.github.io/message-ffc.html" class="btn btn-info btn-lg">
+                    <span class="glyphicon glyphicon-list-alt text-big"></span>
+                    <h4>ข่าวและกิจกรรม</h4>
+                </a>
+                <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
+            </div>
+            <!-- /.col-lg-4 -->
+
+            <div class="col-sm-3  wow fadeInDown text-center animated animated" style="visibility: visible;">
+
+
+                <span class="glyphicon glyphicon-home text-big"></span>
+                <h4>เทคนิคทางบ้าน</h4>
+
+                <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
+            </div>
+            <!-- /.col-lg-4 -->
+
+        </div>
+    </div>
+</div>
