แก้ไขรูปหน้า index

--- a/download-ffc.html
+++ b/download-ffc.html
@@ -3,7 +3,9 @@ layout: default-ffc
 ---
 <div class="container">
 <div class="col-md-12">
+    <div class="center">
 <h1>เอกสารดาวน์โหลด</h1>
+
 <style>
 table {
     border-collapse: collapse;
@@ -94,5 +96,6 @@ th {
   </tr>
 </table>
 </center>
+</div>
 </div>
 </div>
