--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@ layout: default-ffc
 
     <div class="content-section-a trb-survey-bg">
         <div class="container">
-            <h2>คืออะไร???</h2>
+            <h2>Family Folder Collector </h2>
             <div class="row">
                 <div class="col-sm-6 pull-right wow fadeInRightBig animated animated" style="visibility: visible;">
                     <img class="img-responsive " src="/img/1.png" alt="FFC.com" width="325" height="310">
                     <img class="img-responsive " src="/img/1.png" alt="FFC.com" width="325" height="310">
                 </div>
                 <div class="col-sm-6 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
-                    <h2 class="section-heading heading-pink">Family Folder Collector </h2>
+                    <h2 class="section-heading heading-pink">คืออะไร? </h2>
                     <p class="sansserif" style="color:#000000;">
                         โปรแกรมบันทึกข้อมูลสุขภาพครอบครัว (Family Folder Collector) หรือเราเรียกสั้นๆว่า FFC โดยโปรแกรมถูกออกแบบให้ใช้งานร่วมกับฐานข้อมูล โปรแกรมระบบงานโรงพยาบาลส่งเสริมสุขภาพตำบล และศูนย์สุขภาพชุมชน JHCISของศูนย์เทคโนโลยีสารสนเทศและการสื่อสาร สำนักงานปลัดกระทรวง
                         สาธารณสุข เพื่ออำนวยความสะดวกให้เจ้าหน้าที่สาธารณสุข ที่พ.สต.นำไปใช้ เยี่ยมบ้าน คัดกรองโรค สำรวจพิกัดบ้าน สถานที่สำคัญ ในชุมชน ลดปัญหาการกรอกข้อมูลซ้ำซ้อนและส่งเสริมการทำงานเชิงรุกให้มีประสิทธิภาพมากยิ่งขึ้น
@@ -50,7 +50,7 @@ layout: default-ffc
 
                     <p>
                         <a class="" href="https://play.google.com/store/apps/details?id=th.in.ffc" target="_blank" role="button">
-                            <img style="height: 64px;" src="/img/Google-Play.png" alt="FFC.com" width="150" height="100">
+                            <img style="height: 64px;" src="/img/Google-Play.png" alt="FFC.com">
                         </a>
                         <!--<a class="btn btn-embossed btn-info" href="#" role="button">Visit Website</a>--></p>
                 </div>
@@ -159,11 +159,13 @@ layout: default-ffc
 
     <div class="content-section-b trb-video-bg">
         <div class="content-section-b">
-            <div class="container">
+          <div class="contai ner">
+            <div class="contai ner">
                 <div class="center">
                     <div class="row white">
                         <div class="col-md-12 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
-                            <h2>FFC Video </h2>
+                          <p class="sansserif" style="color:#FFFFFF;">ถ้าอยากรู้จัก FFC เพิ่มเติมสามารถชมวิดิโอด้านล่างได้เลยค่ะ ^_^ </p>
+                        
                             <iframe width="560" height="415" src="https://www.youtube.com/embed/DJceyu3Bg6c" frameborder="0" allowfullscreen></iframe>
                         </div>
 
