--- a/download-ffc.html
+++ b/download-ffc.html
@@ -36,26 +36,26 @@ th {
   <tr>
     <td>1</td>
     <td>
-    <a href="http://www.dms.moph.go.th/dmsweb/publish/publish07102016101008.rar" target="_blank">
-      คู่มือการใช้งาน</a></td>
+
+      คู่มือการใช้งาน</td>
     <td>3</td>
   </tr>
   <tr>
     <td>2</td>
-    <td><a href="http://www.dms.moph.go.th/dmsweb/publish/publish07102016101008.rar" target="_blank">
-      การใช้งาน</a></td>
+    <td>
+      การใช้งาน</td>
     <td>5</td>
   </tr>
   <tr>
     <td>3</td>
-    <td><a href="http://www.dms.moph.go.th/dmsweb/publish/publish07102016101008.rar" target="_blank">
-      ประชาชาติธุรกิจ FFC Plus</a></td>
+    <td>
+      ประชาชาติธุรกิจ FFC Plus</td>
     <td>9</td>
   </tr>
   <tr>
     <td>4</td>
-    <td>
-      <a href="http://www.dms.moph.go.th/dmsweb/publish/publish07102016101008.rar" target="_blank"></a></td>
+    <td>การใช้งาน</td>
+
     <td>9</td>
   </tr>
   <tr>
