--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@ layout: default-ffc
 
             <div class="col-md-6 col-sm-3">
                 <h4>ที่อยู่</h4>
-                <p > ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ <br>National Electronics and Computer Technology Center : NECTEC <br>  112 ถนนพหลโยธิน ตำบลคลองหนึ่ง <br>อำเภอคลองหลวง จังหวัดปทุมธานี 12120 <br>โทรศัพท์ 02-564-6900 </br>
-                </br></br>
+                <p > ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ <br>National Electronics and Computer Technology Center : NECTEC</br> <br>  112 ถนนพหลโยธิน ตำบลคลองหนึ่ง</br> <br>อำเภอคลองหลวง จังหวัดปทุมธานี 12120</br> <br>โทรศัพท์ 02-564-6900 </br>
+
 
                 </p>
 
