--- a/index.html
+++ b/index.html
@@ -190,10 +190,12 @@ layout: default-ffc
 
             <div class="col-md-6 col-sm-3">
                 <h4>ที่อยู่</h4>
-                <p > ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ <br>National Electronics and Computer Technology Center : NECTEC</br> <br>  112 ถนนพหลโยธิน ตำบลคลองหนึ่ง</br> <br>อำเภอคลองหลวง จังหวัดปทุมธานี 12120</br> <br>โทรศัพท์ 02-564-6900 </br>
-
-
-                </p>
+                <p > ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ</p>
+                  <p>National Electronics and Computer Technology Center : NECTEC </p>
+                  <p> 112 ถนนพหลโยธิน ตำบลคลองหนึ่ง</p>
+                  <p>อำเภอคลองหลวง จังหวัดปทุมธานี 12120 </p>
+                  <p>โทรศัพท์ 02-564-6900
+            </p>
 
             </div>
             </div>
