--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ layout: default-ffc
         <div class="row">
           <center>
           <h2>ติดต่อเรา </h2>
-            <br>&nbsp;</br>
+      <br>&nbsp;
           </center>
           <div class="col-md-6 col-sm-3">
           <center>
