--- a/index.html
+++ b/index.html
@@ -7,14 +7,22 @@ layout: default-ffc
             <div class="intro-header">
                 <div class="container">
                     <div class="center">
+                      <div class="center">
+                        <div class="center">
+                          <div class="center">
+                            <div class="center">
+                              <div class="center">
+                        <h3 class="h3_home wow fadeIn animated animated" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s;">FFCบริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพในชุมชน</h3>
 
-                        <h3>FFCบริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพในชุมชน</h3>
                     </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
                     <!-- /.container -->
 
                 </div>
-
-
             </div>
         </div>
     </div>
@@ -151,8 +159,6 @@ layout: default-ffc
         </div>
     </div>
 </div>
-
-
 <!-- /.container -->
 
 <div class="content-section-b trb-video-bg">
@@ -187,7 +193,6 @@ layout: default-ffc
         </a>
       </center>
       </div>
-
             <div class="col-md-6 col-sm-3">
                 <h4>ที่อยู่</h4>
                 <p > ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ</p>
@@ -199,5 +204,5 @@ layout: default-ffc
 
             </div>
             </div>
-          </div>
+          </divw>
         </div>
