แก้ขนาดตัวอักษร

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default-ffc
                           <div class="center">
                             <div class="center">
                               <div class="center">
-                        <h3 class="h3_home wow fadeIn animated animated" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s;">FFCบริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพในชุมชน</h3>
+                        <p class="sansserif" >FFCบริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพในชุมชน</p>
 
                     </div>
                   </div>
@@ -49,7 +49,7 @@ layout: default-ffc
             </div>
             <div class="col-sm-6 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
                 <h2 class="section-heading heading-pink">คืออะไร? </h2>
-                <p class="sansserif" style="color:#000000;">
+                <p style="color:#000000;">
                     โปรแกรมบันทึกข้อมูลสุขภาพครอบครัว (Family Folder Collector) หรือเราเรียกสั้นๆว่า FFC โดยโปรแกรมถูกออกแบบให้ใช้งานร่วมกับฐานข้อมูล โปรแกรมระบบงานโรงพยาบาลส่งเสริมสุขภาพตำบล และศูนย์สุขภาพชุมชน JHCISของศูนย์เทคโนโลยีสารสนเทศและการสื่อสาร สำนักงานปลัดกระทรวง
                     สาธารณสุข เพื่ออำนวยความสะดวกให้เจ้าหน้าที่สาธารณสุข ที่พ.สต.นำไปใช้ เยี่ยมบ้าน คัดกรองโรค สำรวจพิกัดบ้าน สถานที่สำคัญ ในชุมชน ลดปัญหาการกรอกข้อมูลซ้ำซ้อนและส่งเสริมการทำงานเชิงรุกให้มีประสิทธิภาพมากยิ่งขึ้น
                 </p>
@@ -74,7 +74,7 @@ layout: default-ffc
             <div class="col-sm-6 wow fadeInRightBig animated animated" data-animation-delay="200" style="visibility: visible; animation-name: fadeInRightBig;">
                 <h2 class="section-heading heading-green">ใครใช้?</h2>
 
-                <p class="sansserif">
+                <p>
                     ผู้ใช้แอพ FFC Plus นี้ สำหรับเจ้าหน้าที่ทางด้านสาธารณะสุขที่ทำงานอยู่ตามสถานีอนามัย โรงพยาบาลส่งเสริมสุขภาพตำบล (รพ.สต.)ที่ใช้งานโปรแกรม JHCIS อยู่เท่านั้น
                 </p>
 
@@ -204,5 +204,5 @@ layout: default-ffc
 
             </div>
             </div>
-          </divw>
+          </div>
         </div>
