แก้ข่าวและเพิ่มข่าวในหน้าindex

--- a/index.html
+++ b/index.html
@@ -6,20 +6,12 @@ layout: default-ffc
         <div class="col-md-12">
             <div class="intro-header">
                 <div class="container">
-                    <div class="center">
-                      <div class="center">
-                        <div class="center">
-                          <div class="center">
-                            <div class="center">
-                              <div class="center">
-                        <p class="sansserif" >FFCบริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพในชุมชน</p>
+                    <div class="centers">
+
+                      <p class="sansserif">FFCบริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพในชุมชน</p>
 
                     </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+
                     <!-- /.container -->
 
                 </div>
@@ -160,7 +152,59 @@ layout: default-ffc
     </div>
 </div>
 <!-- /.container -->
+<div class="content-section-a trb-report-bg">
+    <div class="container">
+        <div class="row">
+            <center>
+                <h2>ข่าวสารและกิจกรรม</h2>
+                <br>&nbsp;
+            </center>
+            <div class="col-md-4 col-sm-3">
+                    <div class="news-bg">
+                      <a href="https://suppaluck.github.io/blog/new2">
+                        <img class="news-img" src="img/news/new1.jpg" alt="FFC.com">
+                        <div class="newsh-content newsh-padding">
+                            <h4>CAT สานฝัน นวัตกรรมสานฝัน ตอนโปรแกรมบันทึกข้อมูลสุขภาพครอบครัว</h4>
+                              </a>
+                            <h6>2016-02-08 13:33:30</h6>
+                            <p>โปรแกรมบันทึกข้อมูลสุขภาพครอบครัว เราเรียกส้ันๆ ว่า FFC เป็นโปรแกรมที่ทำงานบนระบบปฏิบัติการแอนดรอยด</p>
+                        </div>
+                    </div>
 
+            </div>
+            <div class="col-md-4 col-sm-3">
+
+                    <div class="news-bg">
+                      <a href="https://suppaluck.github.io/blog/new3">
+                        <img class="news-img" src="img/news/new3.jpg" alt="FFC.com">
+                        <div class="newsh-content newsh-padding">
+                            <h4>Family Folder Collector แอพบันทึกข้อมูลสุขภาพครอบครัว เพื่อพัฒนาสาธารณสุขไทย</h4>
+                          </a>
+                            <h6>2014-05-21</h6>
+                            <p>พัฒนาแอพพลิเคชั่นโปรแกรมบันทึกข้อมูลสุขภาพครอบครัวแบบพกพา FFC สำหรับเก็บข้อมูลสุขภาพของผู้ใช้บริการ</p>
+                        </div>
+                    </div>
+
+            </div>
+            <div class="col-md-4 col-sm-3">
+                    <div class="news-bg">
+                      <a href="https://suppaluck.github.io/blog/new1.html">
+                        <img class="news-img" src="img/news/new2.png" alt="FFC.com">
+                        <div class="newsh-content newsh-padding">
+                            <h4>โปรแกรมบันทึกข้อมูลสุขภาพครอบครัว (FFC Plus)</h4>
+                              </a>
+                            <h6>2014-05-27</h6>
+                            <p>การใช้งานเทคโนโลยีในพื้นที่สาธารณสุขห่างไกล ด้วยอุปกรณ์พกพา โปรแกรมบันทึกข้อมูลสุขภาพครอบครัว (FFC Plus)</p>
+                        </div>
+                    </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+<div class="center">
+ <a href="https://suppaluck.github.io/news"><h3>ดูข่าวสารและกิจกรรมเพิ่มเติม</h3></a>
+ </div>
 <div class="content-section-b trb-video-bg">
     <div class="content-section-b">
         <div class="contai ner">
@@ -179,30 +223,31 @@ layout: default-ffc
         </div>
     </div>
 </div>
+
 <div class="content-section-a trb-report-bg">
     <div class="container">
         <div class="row">
-          <center>
-          <h2>ติดต่อเรา </h2>
-      <br>&nbsp;
-          </center>
-          <div class="col-md-6 col-sm-3">
-          <center>
-          <a href="https://www.google.co.th/maps/place/%E0%B8%A8%E0%B8%B9%E0%B8%99%E0%B8%A2%E0%B9%8C%E0%B9%80%E0%B8%97%E0%B8%84%E0%B9%82%E0%B8%99%E0%B9%82%E0%B8%A5%E0%B8%A2%E0%B8%B5%E0%B8%AD%E0%B8%B4%E0%B9%80%E0%B8%A5%E0%B9%87%E0%B8%81%E0%B8%97%E0%B8%A3%E0%B8%AD%E0%B8%99%E0%B8%B4%E0%B8%81%E0%B8%AA%E0%B9%8C%E0%B9%81%E0%B8%A5%E0%B8%B0%E0%B8%84%E0%B8%AD%E0%B8%A1%E0%B8%9E%E0%B8%B4%E0%B8%A7%E0%B9%80%E0%B8%95%E0%B8%AD%E0%B8%A3%E0%B9%8C%E0%B9%81%E0%B8%AB%E0%B9%88%E0%B8%87%E0%B8%8A%E0%B8%B2%E0%B8%95%E0%B8%B4/@14.0777859,100.5991244,17z/data=!4m5!3m4!1s0x30e27f945ff7f713:0xa05f682498545ab0!8m2!3d14.0777859!4d100.6013131">
-          <img class="img-responsive " src="img/map2.png" alt="FFC.com" width="250" height="200">
-        </a>
-      </center>
-      </div>
+            <center>
+                <h2>ติดต่อเรา </h2>
+                <br>&nbsp;
+            </center>
+            <div class="col-md-6 col-sm-3">
+                <center>
+                    <a href="https://www.google.co.th/maps/place/%E0%B8%A8%E0%B8%B9%E0%B8%99%E0%B8%A2%E0%B9%8C%E0%B9%80%E0%B8%97%E0%B8%84%E0%B9%82%E0%B8%99%E0%B9%82%E0%B8%A5%E0%B8%A2%E0%B8%B5%E0%B8%AD%E0%B8%B4%E0%B9%80%E0%B8%A5%E0%B9%87%E0%B8%81%E0%B8%97%E0%B8%A3%E0%B8%AD%E0%B8%99%E0%B8%B4%E0%B8%81%E0%B8%AA%E0%B9%8C%E0%B9%81%E0%B8%A5%E0%B8%B0%E0%B8%84%E0%B8%AD%E0%B8%A1%E0%B8%9E%E0%B8%B4%E0%B8%A7%E0%B9%80%E0%B8%95%E0%B8%AD%E0%B8%A3%E0%B9%8C%E0%B9%81%E0%B8%AB%E0%B9%88%E0%B8%87%E0%B8%8A%E0%B8%B2%E0%B8%95%E0%B8%B4/@14.0777859,100.5991244,17z/data=!4m5!3m4!1s0x30e27f945ff7f713:0xa05f682498545ab0!8m2!3d14.0777859!4d100.6013131">
+                        <img class="img-responsive " src="img/map2.png" alt="FFC.com" width="250" height="200">
+                    </a>
+                </center>
+            </div>
             <div class="col-md-6 col-sm-3">
                 <h4>ที่อยู่</h4>
-                <p > ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ</p>
-                  <p>National Electronics and Computer Technology Center : NECTEC </p>
-                  <p> 112 ถนนพหลโยธิน ตำบลคลองหนึ่ง</p>
-                  <p>อำเภอคลองหลวง จังหวัดปทุมธานี 12120 </p>
-                  <p>โทรศัพท์ 02-564-6900
-            </p>
+                <p> ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ</p>
+                <p>National Electronics and Computer Technology Center : NECTEC </p>
+                <p> 112 ถนนพหลโยธิน ตำบลคลองหนึ่ง</p>
+                <p>อำเภอคลองหลวง จังหวัดปทุมธานี 12120 </p>
+                <p>โทรศัพท์ 02-564-6900
+                </p>
 
             </div>
-            </div>
-          </div>
         </div>
+    </div>
+</div>
