--- a/news.html
+++ b/news.html
@@ -7,7 +7,7 @@ layout: ffc-layouts
 <div class="row">
 
     {% for post in site.posts %}
-    <div class="col-sm-4 news-padding">
+    <div class="col-md-4 news-padding">
         <a class="news-link"href="{{ post.url }}.html">
             <div class="news-bg">
                 <img class="news-img" src="img/news/{{ post.image }}" alt="FFC.com">
