--- a/index.html
+++ b/index.html
@@ -198,20 +198,16 @@ layout: default-ffc
                         </div>
                     </div>
 
-            </div>
+          </div>
+          <div class="center">
+           <a href="https://suppaluck.github.io/news"><h3>ดูข่าวสารและกิจกรรมเพิ่มเติม</h3></a>
+           </div>
         </div>
+      </div>
     </div>
-</div>
-
-<div class="center">
- <a href="https://suppaluck.github.io/news"><h3>ดูข่าวสารและกิจกรรมเพิ่มเติม</h3></a>
- </div>
 <div class="content-section-b trb-video-bg">
-    <div class="content-section-b">
-        <div class="contai ner">
-            <div class="contai ner">
-                <div class="center">
-                    <div class="row white">
+              <div class="center">
+                    <div class="row">
                         <div class="col-md-12 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
                             <p class="sansserif" style="color:#FFFFFF;">ถ้าอยากรู้จัก FFC เพิ่มเติมสามารถชมวิดิโอด้านล่างได้เลยค่ะ ^_^ </p>
 
@@ -220,9 +216,7 @@ layout: default-ffc
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-</div>
+
 
 <div class="content-section-a trb-report-bg">
     <div class="container">
