--- a/index.html
+++ b/index.html
@@ -168,9 +168,10 @@ layout: default-ffc
                               </a>
                             <h6>2016-02-08 13:33:30</h6>
                             <p>โปรแกรมบันทึกข้อมูลสุขภาพครอบครัว เราเรียกส้ันๆ ว่า FFC เป็นโปรแกรมที่ทำงานบนระบบปฏิบัติการแอนดรอยด</p>
-                        </div>
-                    </div>
 
+                      </div>
+                    </div>
+                    </a>
             </div>
             <div class="col-md-4 col-sm-3">
 
@@ -179,12 +180,12 @@ layout: default-ffc
                         <img class="news-img" src="img/news/new3.jpg" alt="FFC.com">
                         <div class="newsh-content newsh-padding">
                             <h4>Family Folder Collector แอพบันทึกข้อมูลสุขภาพครอบครัว เพื่อพัฒนาสาธารณสุขไทย</h4>
-                          </a>
+
                             <h6>2014-05-21</h6>
                             <p>พัฒนาแอพพลิเคชั่นโปรแกรมบันทึกข้อมูลสุขภาพครอบครัวแบบพกพา FFC สำหรับเก็บข้อมูลสุขภาพของผู้ใช้บริการ</p>
                         </div>
                     </div>
-
+  </a>
             </div>
             <div class="col-md-4 col-sm-3">
                     <div class="news-bg">
@@ -192,16 +193,14 @@ layout: default-ffc
                         <img class="news-img" src="img/news/new2.png" alt="FFC.com">
                         <div class="newsh-content newsh-padding">
                             <h4>โปรแกรมบันทึกข้อมูลสุขภาพครอบครัว (FFC Plus)</h4>
-                            </a>
+
                             <h6>2014-05-27</h6>
                             <p>การใช้งานเทคโนโลยีในพื้นที่สาธารณสุขห่างไกล ด้วยอุปกรณ์พกพา โปรแกรมบันทึกข้อมูลสุขภาพครอบครัว (FFC Plus)</p>
                         </div>
                     </div>
-
+    </a>
           </div>
-          <div class="center">
-           <a href="https://suppaluck.github.io/news"><h3>ดูข่าวสารและกิจกรรมเพิ่มเติม</h3></a>
-           </div>
+
         </div>
       </div>
     </div>
@@ -212,11 +211,8 @@ layout: default-ffc
                             <p class="sansserif" style="color:#FFFFFF;">ถ้าอยากรู้จัก FFC เพิ่มเติมสามารถชมวิดิโอด้านล่างได้เลยค่ะ ^_^ </p>
 
                             <iframe width="560" height="415" src="https://www.youtube.com/embed/DJceyu3Bg6c" frameborder="0" allowfullscreen></iframe>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
+</div></div></div>
 
 <div class="content-section-a trb-report-bg">
     <div class="container">
@@ -231,7 +227,7 @@ layout: default-ffc
                         <img class="img-responsive " src="img/map2.png" alt="FFC.com" width="250" height="200">
                     </a>
                 </center>
-            </div>
+          </div>
             <div class="col-md-6 col-sm-3">
                 <h4>ที่อยู่</h4>
                 <p> ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ</p>
