--- a/index.html
+++ b/index.html
@@ -165,14 +165,13 @@ layout: default-ffc
                         <img class="news-img" src="img/news/new1.jpg" alt="FFC.com">
                         <div class="newsh-content newsh-padding">
                             <h4>CAT สานฝัน นวัตกรรมสานฝัน ตอนโปรแกรมบันทึกข้อมูลสุขภาพครอบครัว</h4>
-                            
+
                             <h6>2016-02-08 13:33:30</h6>
                             <p>โปรแกรมบันทึกข้อมูลสุขภาพครอบครัว เราเรียกส้ันๆ ว่า FFC เป็นโปรแกรมที่ทำงานบนระบบปฏิบัติการแอนดรอยด</p>
 
                       </div>
                         </a>
                     </div>
-
             </div>
             <div class="col-md-4 col-sm-3">
 
@@ -214,7 +213,7 @@ layout: default-ffc
 
                             <iframe width="560" height="415" src="https://www.youtube.com/embed/DJceyu3Bg6c" frameborder="0" allowfullscreen></iframe>
 
-</div></div></div>
+</div></div></div></div>
 
 <div class="content-section-a trb-report-bg">
     <div class="container">
