--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default-ffc
                 <div class="container">
                     <div class="centers">
 
-                      <p class="sansserif">FFCบริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพในชุมชน</p>
+                        <p class="sansserif">FFCบริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพในชุมชน</p>
 
                     </div>
 
@@ -160,8 +160,8 @@ layout: default-ffc
                 <br>&nbsp;
             </center>
             <div class="col-md-4 col-sm-3">
-                    <div class="news-bg">
-                      <a href="https://suppaluck.github.io/blog/new2">
+                <div class="news-bg">
+                    <a href="https://suppaluck.github.io/blog/new2">
                         <img class="news-img" src="img/news/new1.jpg" alt="FFC.com">
                         <div class="newsh-content newsh-padding">
                             <h4>CAT สานฝัน นวัตกรรมสานฝัน ตอนโปรแกรมบันทึกข้อมูลสุขภาพครอบครัว</h4>
@@ -169,14 +169,14 @@ layout: default-ffc
                             <h6>2016-02-08 13:33:30</h6>
                             <p>โปรแกรมบันทึกข้อมูลสุขภาพครอบครัว เราเรียกส้ันๆ ว่า FFC เป็นโปรแกรมที่ทำงานบนระบบปฏิบัติการแอนดรอยด</p>
 
-                      </div>
-                        </a>
-                    </div>
+                        </div>
+                    </a>
+                </div>
             </div>
             <div class="col-md-4 col-sm-3">
 
-                    <div class="news-bg">
-                      <a href="https://suppaluck.github.io/blog/new3">
+                <div class="news-bg">
+                    <a href="https://suppaluck.github.io/blog/new3">
                         <img class="news-img" src="img/news/new3.jpg" alt="FFC.com">
                         <div class="newsh-content newsh-padding">
                             <h4>Family Folder Collector แอพบันทึกข้อมูลสุขภาพครอบครัว เพื่อพัฒนาสาธารณสุขไทย</h4>
@@ -184,13 +184,13 @@ layout: default-ffc
                             <h6>2014-05-21</h6>
                             <p>พัฒนาแอพพลิเคชั่นโปรแกรมบันทึกข้อมูลสุขภาพครอบครัวแบบพกพา FFC สำหรับเก็บข้อมูลสุขภาพของผู้ใช้บริการ</p>
                         </div>
-                          </a>
-                    </div>
+                    </a>
+                </div>
 
             </div>
             <div class="col-md-4 col-sm-3">
-                    <div class="news-bg">
-                      <a href="https://suppaluck.github.io/blog/new1.html">
+                <div class="news-bg">
+                    <a href="https://suppaluck.github.io/blog/new1.html">
                         <img class="news-img" src="img/news/new2.png" alt="FFC.com">
                         <div class="newsh-content newsh-padding">
                             <h4>โปรแกรมบันทึกข้อมูลสุขภาพครอบครัว (FFC Plus)</h4>
@@ -198,22 +198,29 @@ layout: default-ffc
                             <h6>2014-05-27</h6>
                             <p>การใช้งานเทคโนโลยีในพื้นที่สาธารณสุขห่างไกล ด้วยอุปกรณ์พกพา โปรแกรมบันทึกข้อมูลสุขภาพครอบครัว (FFC Plus)</p>
                         </div>
-                        </a>
-                    </div>
-          </div>
+                    </a>
+                </div>
+            </div>
 
         </div>
-      </div>
+    </div>
+</div>
+<div class="news-center">
+ <a href="https://suppaluck.github.io/news">
+      <button style="font-size:24px">ข่าวเพิ่มเติม <i class="fa fa-hand-o-right"></i></button></a>
     </div>
 <div class="content-section-b trb-video-bg">
-              <div class="center">
-                    <div class="row">
-                        <div class="col-md-12 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
-                            <p class="sansserif" style="color:#FFFFFF;">ถ้าอยากรู้จัก FFC เพิ่มเติมสามารถชมวิดิโอด้านล่างได้เลยค่ะ ^_^ </p>
+    <div class="center">
+        <div class="row">
+            <div class="col-md-12 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
+                <p class="sansserif" style="color:#FFFFFF;">ถ้าอยากรู้จัก FFC เพิ่มเติมสามารถชมวิดิโอด้านล่างได้เลยค่ะ ^_^ </p>
 
-                            <iframe width="560" height="415" src="https://www.youtube.com/embed/DJceyu3Bg6c" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="415" src="https://www.youtube.com/embed/DJceyu3Bg6c" frameborder="0" allowfullscreen></iframe>
 
-</div></div></div></div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <div class="content-section-a trb-report-bg">
     <div class="container">
@@ -228,7 +235,7 @@ layout: default-ffc
                         <img class="img-responsive " src="img/map2.png" alt="FFC.com" width="250" height="200">
                     </a>
                 </center>
-          </div>
+            </div>
             <div class="col-md-6 col-sm-3">
                 <h4>ที่อยู่</h4>
                 <p> ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ</p>
