--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ layout: default-ffc
     <div class="center">
         <div class="row">
             <div class="col-md-12 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
-                <p class="sansserif" style="color:#FFFFFF;">ถ้าอยากรู้จัก FFC เพิ่มเติมสามารถชมวิดิโอด้านล่างได้เลยค่ะ ^_^ </p>
+                <p class="sansserif" style="color:#FFFFFF;">เรามาทำความรู้จัก FFC เพิ่มจากวิดิโอนี้นะคะ </p>
 
                 <iframe width="560" height="415" src="https://www.youtube.com/embed/DJceyu3Bg6c" frameborder="0" allowfullscreen></iframe>
 
